--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "ReissTest NPM settings",
   "main": "index.js",
   "scripts": {
-    "build-dev": "set NODE_ENV=development&& babel-node server.js",
-    "build-prod": "set NODE_ENV=production&& webpack && babel-node server.js",
+    "b-dev": "set NODE_ENV=development&& webpack && babel-node server.js",
+    "b-prod": "set NODE_ENV=production&& webpack && babel-node server.js",
     "fast": "set NODE_ENV=development&& webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,14 +28,20 @@
   },
   "devDependencies": {
     "@webpack-cli/init": "0.0.8",
+    "autoprefixer": "^8.6.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.0",
+    "postcss-loader": "^2.1.5",
+    "precss": "^3.1.2",
     "react-hot-loader": "^4.0.0",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
     "webpack-config": "^7.5.0",
