--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=development&& webpack && babel-node server.js",
+    "d": "set NODE_ENV=development&& webpack",
     "prod": "set NODE_ENV=production&& webpack && babel-node server.js",
-    "fast": "set NODE_ENV=development&& webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
