--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-  "name": "reisstest",
-  "version": "1.0.0",
-  "description": "ReissTest NPM settings",
-  "main": "index.js",
-  "scripts": {
-    "dev": "set NODE_ENV=development&& webpack && babel-node server.js",
-    "d": "set NODE_ENV=development&& webpack",
-    "prod": "set NODE_ENV=production&& webpack && babel-node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/A64Danil/ReissTest.git"
-  },
-  "author": "Danil X",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/A64Danil/ReissTest/issues"
-  },
-  "homepage": "https://github.com/A64Danil/ReissTest#readme",
-  "dependencies": {
-    "express": "^4.16.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.4.0-alpha.1"
-  },
-  "devDependencies": {
-    "@webpack-cli/init": "0.0.8",
-    "autoprefixer": "^8.6.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.0.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "postcss-loader": "^2.1.5",
-    "precss": "^3.1.2",
-    "react-hot-loader": "^4.0.0",
-    "serviceworker-webpack-plugin": "^1.0.0-alpha02",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-config": "^7.5.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.2"
-  }
+	"name": "reisstest",
+	"version": "1.0.0",
+	"description": "ReissTest NPM settings",
+	"main": "index.js",
+	"scripts": {
+		"dev": "set NODE_ENV=development&& webpack && babel-node server.js",
+		"d": "set NODE_ENV=development&& webpack",
+		"prod": "set NODE_ENV=production&& webpack && babel-node server.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/A64Danil/ReissTest.git"
+	},
+	"author": "Danil X",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/A64Danil/ReissTest/issues"
+	},
+	"homepage": "https://github.com/A64Danil/ReissTest#readme",
+	"dependencies": {
+		"express": "^4.16.3",
+		"react": "^16.4.1",
+		"react-dom": "^16.4.1",
+		"react-router": "^4.3.1",
+		"react-router-dom": "^4.4.0-alpha.1"
+	},
+	"devDependencies": {
+		"@webpack-cli/init": "0.0.8",
+		"autoprefixer": "^8.6.4",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^7.1.4",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"css-loader": "^0.28.11",
+		"eslint": "^5.0.1",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-plugin-import": "^2.13.0",
+		"eslint-plugin-node": "^6.0.1",
+		"eslint-plugin-promise": "^3.8.0",
+		"eslint-plugin-standard": "^3.1.0",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.4.0",
+		"node-sass": "^4.9.0",
+		"postcss-loader": "^2.1.5",
+		"precss": "^3.1.2",
+		"react-hot-loader": "^4.0.0",
+		"sass-loader": "^7.0.3",
+		"serviceworker-webpack-plugin": "^1.0.0-alpha02",
+		"style-loader": "^0.21.0",
+		"webpack": "^4.12.1",
+		"webpack-cli": "^3.0.8",
+		"webpack-config": "^7.5.0",
+		"webpack-dev-middleware": "^3.1.3",
+		"webpack-hot-middleware": "^2.22.2"
+	}
 }
