--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
 		"express": "^4.16.3",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
+		"react-redux": "^5.0.7",
 		"react-router": "^4.3.1",
-		"react-router-dom": "^4.4.0-alpha.1"
+		"react-router-dom": "^4.4.0-alpha.1",
+		"redux": "^4.0.0"
 	},
 	"devDependencies": {
 		"@webpack-cli/init": "0.0.8",
@@ -32,6 +34,7 @@
 		"babel-cli": "^6.26.0",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.4",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"css-loader": "^0.28.11",
