--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"react-redux": "^5.0.7",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.4.0-alpha.1",
-		"redux": "^4.0.0"
+		"redux": "^4.0.0",
+		"shortid": "^2.2.8"
 	},
 	"devDependencies": {
 		"@webpack-cli/init": "0.0.8",
