--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.4.0-alpha.1",
 		"react-router-redux": "^4.0.8",
+		"react-step-range-slider": "^1.4.1",
 		"redux": "^4.0.0",
 		"shortid": "^2.2.8"
 	},
