--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"express": "^4.16.3",
 		"react": "^16.4.1",
+		"react-cookies": "^0.1.0",
 		"react-dom": "^16.4.1",
 		"react-redux": "^5.0.7",
 		"react-router": "^4.3.1",
