--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 		"react": "^16.4.1",
 		"react-cookies": "^0.1.0",
 		"react-dom": "^16.4.1",
+		"react-move": "^2.7.0",
 		"react-redux": "^5.0.7",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.4.0-alpha.1",
 		"react-router-redux": "^4.0.8",
 		"react-step-range-slider": "^1.4.1",
+		"react-transition-group": "^1.2.1",
 		"redux": "^4.0.0",
 		"shortid": "^2.2.8"
 	},
