--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "pages": "0.0.16",
+    "react": "^16.12.0",
+    "react-dom": "^16.9.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "babel-preset-nano-react-app": "^0.1.0",
     "parcel-bundler": "^1.12.3",
-    "sass": "^1.25.0"
+    "sass": "^1.25.0",
+    "postcss-modules": "^1.5.0",
+    "autoprefixer": "^9.7.4"
+  },
+  "postcss": {
+    "modules": true,
+    "localIdentName": "[path]_[name]_[local]",
+    "plugins": {
+      "autoprefixer": true
+    }
   },
   "babel": {
     "presets": [
