--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "react-transition-group": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
