--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "antd": "^3.26.11",
     "pages": "0.0.16",
     "react": "^16.12.0",
     "react-dom": "^16.9.0",
