--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.26.11",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
+    "mobx-state-tree": "^3.15.0",
     "pages": "0.0.16",
     "react": "^16.12.0",
     "react-dom": "^16.9.0",
