--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.26.11",
+    "firebase": "^7.12.0",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "mobx-state-tree": "^3.15.0",
