--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-state-tree": "^3.15.0",
     "pages": "0.0.16",
     "react": "^16.13.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
