--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.9.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "react-yandex-metrika": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
