--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
-    "react-yandex-metrika": "^2.6.0"
+    "react-yandex-metrika": "^2.6.0",
+    "sweetalert2": "^10.12.6"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
