--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "description": "",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "analyze": "source-map-explorer dist/src.* --no-border-checks"
   },
   "license": "MIT",
   "dependencies": {
-    "antd": "^3.26.11",
+    "rc-slider": "*",
     "firebase": "^7.24.0",
     "history": "^4.10.1",
     "mobx": "^5.15.4",
-    "mobx-react": "^6.1.8",
     "mobx-state-tree": "^3.15.0",
-    "pages": "0.0.16",
     "react": "^16.13.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-transition-group": "^4.3.0",
     "react-yandex-metrika": "^2.6.0",
@@ -26,11 +24,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "autoprefixer": "^9.7.4",
+    "source-map-explorer": "^2.5.2",
     "babel-preset-nano-react-app": "^0.1.0",
     "parcel-bundler": "^1.12.3",
-    "sass": "^1.25.0",
     "postcss-modules": "^1.5.0",
-    "autoprefixer": "^9.7.4"
+    "sass": "^1.25.0"
   },
   "postcss": {
     "modules": true,
